--- a/20131130.md
+++ b/20131130.md
@@ -2,11 +2,11 @@
 
  巨困，不知道怎么回事，很少见的情况，出来更日记然后早点 **go to sleep** 。
 
-在本子上记东西，不喜欢中行行地记录下来，喜欢先把纸页从中轴线对半折起来，然后才开始记
+在本子上记东西，不喜欢中行行地记录下来，喜欢先把纸页从中轴线对半折起来，然后才开始记。
 
-差点先跑去睡觉想明早早些起来补日记，后来思想强烈斗争了若干分钟之后，还是坚持下来。因为我怕如果太早的话，气温如果是个位数的 可能会战胜不了。
+差点先跑去睡觉想明早早些起来补日记，后来思想强烈斗争了若干分钟之后，还是坚持下来。因为我怕如果太早的话，气温如果是个位数的，可能会战胜不了。
 
-又发晚了，现在已经15度了… 原本想在11度的时候完成任务的●ˍ●
+又发晚了，现在已经15度了…...原本想在11度的时候完成任务的●ˍ●
 
 在这种冷天气下起床，它的难处在于：如何克制好人在离开被窝的一分钟里生理上对寒冷的抗拒几个特别敏感的时刻，然后就是穿衣服。 挺过之后(像我现在这样习惯了的也就不用挺了起来没什么感觉和抗拒) 就刷牙洗脸现在精神很不错。
 
