Correct some syntax errors

--- a/20131201.md
+++ b/20131201.md
@@ -6,7 +6,7 @@
 
 为毛今天显示的温度比前阵高了可是起床感觉难度增大了点，为毛我更愿意相信那些五六点更动态的其实是躲在被窝里玩爪机而不是爬起来了。
 
-我发现现在已经十二月了 今年最后一个月 还记得这个年头自己是怎么开始的吗
+我发现现在已经十二月了，今年最后一个月，还记得这个年头自己是怎么开始的吗。
 
 <br/>
 
