Correct some syntax errors

--- a/20131201.md
+++ b/20131201.md
@@ -36,11 +36,11 @@
 
 <br/>
 
- [付年](http://user.qzone.qq.com/121769102)  : 今天居然没发？
+付年: 今天居然没发？
 
- [I](http://user.qzone.qq.com/137452596)  : 欠费24小时没上了，日记本满满的两天的量现在要开始工作了ˇ▽ˇ
+I: 欠费24小时没上了，日记本满满的两天的量现在要开始工作了ˇ▽ˇ
 
- [付年](http://user.qzone.qq.com/121769102) 回复 [I](http://user.qzone.qq.com/137452596)  : …
+ 付年 回复 I : …
 
 
 
