--- a/20131203.md
+++ b/20131203.md
@@ -24,7 +24,7 @@
 
 现在有的模拟卷已经丧心病狂到拿`圆`来当大题了→_→
 
-`圆曲`的一个很大的魅力 今天听懂了 一个月后却写不出来了ˇ▽ˇ
+`圆曲`的一个很大的魅力，今天听懂了，一个月后却写不出来了ˇ▽ˇ
 
 到了现在，你还会为运动会多看了几个早上比赛落下了很多作业而后悔嘛？或者说那时的你藏着身多写了几个昼夜的作业真的取得了满意的效果或成果了吗？有的事，真的要放到拉长的时间轴上去看的。
 
