--- a/20131204.md
+++ b/20131204.md
@@ -42,7 +42,7 @@ by 米兰·昆德拉
 
 `圆曲`有些题目，此刻你紧紧纠结着不放的题目，非要破解出来才肯罢手。可是它们或许是你第一遇到，而且也是最后一次遇到了，一生可能就碰到这题一次 永远有不会做的题目。即便你已经经过千百道题的练习，常常放手不去死缠烂打地，你就可以领会其中的解法了。
 
-`圆曲`这玩意儿 我还是一天一题细水长流吧 一个晚上这个三四题简直精分的节奏的赶脚
+对于`圆曲`这玩意儿，我还是一天一题细水长流吧！一个晚上这个三四题简直精分的节奏的赶脚。
 
 大题用`集坐标`简直开挂，而且用超纲知识点解答。高考我是不知道啊，不过学校的管理层是不给分的咩OTL
 
