--- a/20131218.md
+++ b/20131218.md
@@ -82,7 +82,7 @@
 
 **早睡并不比早起容易**
 
-那是，很庆幸身边有一些很好很棒的人，不像很多闺蜜们情侣们那样，到晚也要缠着发信息生怕一天没联络没聊到隔天仿佛新的白天一到亲密度就会被稀释得大打折扣似的。要相信，要看到，会有那些人，即便有一段时间没联络了，可是每当一有空一说起话来 一就可以交流得很融洽 现在自己是没有那些那么高度敏感的牵挂。所以日记写完，再在克制拖延上下点功夫，睡眠挺不错的。
+那是，很庆幸身边有一些很好很棒的人，不像很多闺蜜们情侣们那样，到晚也要缠着发信息生怕一天没联络没聊到隔天仿佛新的白天一到亲密度就会被稀释得大打折扣似的。要相信，要看到，会有那些人，即便有一段时间没联络了，可是每当一有空一说起话来 一就可以交流得很融洽。 现在自己是没有那些那么高度敏感的牵挂。所以日记写完，再在克制拖延上下点功夫，睡眠挺不错的。
 
 林先生 回复 I：这么说来我生活得挺不容易的......
 
