--- a/20131224.md
+++ b/20131224.md
@@ -16,7 +16,7 @@
 
 最近在玩`知乎`和`果壳网`的应用，都有点耽误工作了。
 
-科普类的应用 近来阅读欲望又有点强烈。
+科普类的应用，近来对于它们的阅读欲望又有点强烈。
 
 之前有那么段时间，总不是很清晰的知道自己兴趣爱好在哪，常做的很多事情有大多数是由于个人情结在里边或者是自己的认知里觉得对。在意识的坚持指引下去做的，有的积累了算是有一定成果，也有些还在边迷路边调整的过程中。
 
@@ -34,4 +34,4 @@
 
 这次月考，似乎是从小到大经历过的感觉最奇怪的考试了，难以言状。
 
-学校每年都在重复着鼓动大家努力去拼搏名牌大学的举动，却几乎不关心他们大学的学习或生活的境况，来对正所学校的教学理念方法做出调整。真正的教育，是当知识从我们身上脱落遗忘了之后，我们还剩下什么。这些“剩下”的“什么”或许才是大学生活最迫切的需要。
+学校每年都在重复着鼓动大家努力去拼搏名牌大学的举动，却几乎不关心他们大学的学习或生活的境况，来对正所学校的教学理念方法做出调整。真正的教育，是当以前的知识从我们身上脱落遗忘了之后，我们还剩下什么。这些“剩下”的“什么”或许才是大学生活最迫切的需要。
