--- a/20131226.md
+++ b/20131226.md
@@ -10,7 +10,7 @@ I 回复 付年：What happened -.-
 
 我说给我一个坚持下去的理由，我听到哪里有声音说发自内心的坚持往往不需要理由，放弃才需要理由。
 
-“你的青春就像摆在货架上的罐头，添加再多的防腐剂，也难逃下架的命运。超市老板根本不给你反应的时间，一夜之间，你依旧穿着二十岁的衣服，留着二十岁的刘海，还是像二十岁那年一无所有，但是你再也说不出“我到了一百岁还可爱”这句话。”
+“你的青春就像摆在货架上的罐头，添加再多的防腐剂，也难逃下架的命运。超市老板根本不给你反应的时间，一夜之间，你依旧穿着二十岁的衣服，留着二十岁的刘海，还是像二十岁那年一无所有，但是你再也说不出'我到了一百岁还可爱'这句话。”
 
 <br/>
 
